--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://minseonp.github.io/minseonp.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://minseonp.github.io/minseonp.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
