remove defaults in config

--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ plugins:
 
 # Pages Path
 
-defaults:
-  - scope:
-      path: '_pages'
-    values:
-      permalink: /:basename:output_ext
+#defaults:
+#  - scope:
+#      path: '_pages'
+#    values:
+#      permalink: /:basename:output_ext
 
 include:
   - _pages
